--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+server.port=8585
 
+server.servlet.context-path=/workintech
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=mappings,health,info
+info.app.name=Workintech
+info.app.description=Developer API
+info.app.version=5.0.0
